# Wayland-Wheeltani

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md
.github/workflows/: codeql.yml  release.yml
contrib/: 60-wayland-wheeltani.rules  wayland-wheeltani-root.service  wayland-wheeltani.service
crates/middle-scroll-core/: Cargo.toml
crates/middle-scroll-core/src/: config.rs  engine.rs  lib.rs  model.rs  tests.rs
crates/middle-scroll-linux/: Cargo.toml
crates/middle-scroll-linux/src/: cli.rs  config_loader.rs  device_discovery.rs  errors.rs  event_router.rs  indicator.rs  main.rs  physical_mouse.rs  service.rs  udev_rule.rs  virtual_mouse.rs
examples/: config.toml
scripts/: bump-version.sh
