[package]
name = "wayland-wheeltani"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Installable Wayland-Wheeltani CLI daemon for Linux/Wayland (evdev + uinput)."
readme = "../../README.md"

[[bin]]
name = "wayland-wheeltani"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"

[target.'cfg(target_os = "linux")'.dependencies]
middle-scroll-core = { version = "1.1.2", path = "../middle-scroll-core" }
evdev = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
nix = { workspace = true, features = ["fs", "user"] }
directories = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
anyhow = { workspace = true }
